--- a/aboutme.html
+++ b/aboutme.html
@@ -132,6 +132,7 @@ p, ol li {
         <li>Amazeness - Survive the maze</li>
         <li>Amazing Brick</li>
         <li>Anmesia: A Machine For Pigs</li>
+        <li>Amnesia: Rain</li>
         <li>Anmesia: Rebirth</li>
         <li>Amnesia: The Dark Descent</li>
         <li>Among Us!</li>
@@ -164,6 +165,7 @@ p, ol li {
         <li>Brawl Stars</li>
         <li>Bricks n Balls</li>
         <li>Broken Through</li>
+        <li>Buff Impostor</li>
         <li>Can You Escape</li>
         <li>Can You Escape 2</li>
         <li>Can Your Pet?</li>
@@ -188,10 +190,12 @@ p, ol li {
         <li>Color Fence - Mind Puzzler</li>
         <li>Color Switch</li>
         <li>Cookie Clicker</li>
+        <li>Corpse Party</li>
         <li>Cover Orange</li>
         <li>Crab Game</li>
         <li>Crossy Road</li>
         <li>Cuphead</li>
+        <li>Cuphead: The Delicious Last Course</li>
         <li>Daddy Long Legs</li>
         <li>Dead Ringer: Fear Yourself LITE</li>
         <li>Deltarune</li>
@@ -219,12 +223,14 @@ p, ol li {
         <li>Dumb Ways To Die</li>
         <li>Dumb Ways To Die 2: The Games</li>
         <li>Dumb Ways To Die 3: World Tour</li>
+        <li>Earl's Day Off</li>
         <li>Egg, Inc.</li>
         <li>Endless Sky</li>
         <li>Endoparasitic</li>
         <li>Euclidea</li>
         <li>Eversion</li>
         <li>Exoptable Money</li>
+        <li>Experiment Groceries</li>
         <li>Exponential Idle</li>
         <li>Eyes - The Horror Game</li>
         <li>Façade</li>
@@ -285,6 +291,7 @@ p, ol li {
         <li>I Love Hue Too</li>
         <li>Identity V</li>
         <li>Illuminati vs. Memes MLG</li>
+        <li>IMSCARED</li>
         <li>It Steals</li>
         <li>Jelly Jump</li>
         <li>JKLM.FUN Party Games</li>
@@ -293,6 +300,7 @@ p, ol li {
         <li>Just More Doors</li>
         <li>Just Shapes and Beats</li>
         <li>Kahoot!</li>
+        <li>Lethal Company</li>
         <li>Levers</li>
         <li>LIMBO</li>
         <li>Little Alchemy</li>
@@ -332,6 +340,7 @@ p, ol li {
         <li>Papers Please</li>
         <li>Penguin Diner: Restaurant Dash</li>
         <li>People Playground</li>
+        <li>Perfect Vermin</li>
         <li>PewDiePie's Tuber Simulator</li>
         <li>PewDuckPie</li>
         <li>Phases</li>
@@ -370,12 +379,14 @@ p, ol li {
         <li>Roblox</li>
         <li>Rolly Vortex</li>
         <li>Safety Blanket</li>
+        <li>SCP: Containment Breach</li>
         <li>SCRABBLE</li>
         <li>Scribblenauts Remix</li>
         <li>Scribblenauts Unlimited</li>
         <li>Sexy Hiking</li>
         <li>Shotgun King: The Final Checkmate</li>
         <li>Skyward</li>
+        <li>SLENDER</li>
         <li>Slender: The Eight Pages</li>
         <li>slither.io</li>
         <li>Smash Hit</li>
@@ -409,6 +420,7 @@ p, ol li {
         <li>Tetris</li>
         <li>The Confraternity of Toast</li>
         <li>The Escapists</li>
+        <li>The Exit 8</li>
         <li>The Henry Stickmin Collection</li>
         <li>The Impossible Game</li>
         <li>The Impossible Game 2</li>
@@ -462,7 +474,7 @@ p, ol li {
     </ol>
     <h4>The list is incomplete. It may be thoroughly updated when I remember the names of the other games I used to play as a child or from my short free time periods.</h4>
 </details>
-<h2>This site was last updated on May 23, 2023.</h2>
+<h2>This site was last updated on December 12, 2023.</h2>
 
 <script>
 var texts = [
