--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ ul li a:hover {
 	</ul>
 	<h4>Normal Projects</h4>
 	<ul>
+	<li><a href="./hovertochangecolor/" class="specs">Hover To Change Color</a></li>
 	<li><a href="./followtheinstructions/" class="specs">Follow The Instructions</a></li>
 	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
 	<li><a href="./SCPDCALC/" class="specs">SciPred's Calculator</a></li>
