move htcc to experimental
changed placement of separate folder

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@ ul li a:hover {
 	</ul>
 	<h4>Normal Projects</h4>
 	<ul>
-	<li><a href="./hovertochangecolor/" class="specs">Hover To Change Color</a></li>
 	<li><a href="./followtheinstructions/" class="specs">Follow The Instructions</a></li>
 	<li><a href="./numbermanipulator/" class="specs">Number Manipulator</a></li>
 	<li><a href="./SCPDCALC/" class="specs">SciPred's Calculator</a></li>
@@ -97,6 +96,7 @@ ul li a:hover {
 	<h4>Experimental Projects</h4>
 	<ul>
 	<li><a href="./experimental/achv2/" class="specs">Achievofile</a></li>
+	<li><a href="./experimental/hovertochangecolor/" class="specs">Hover To Change Color</a></li>
 	<li><a href="./experimental/RandomBinGen/" class="specs">Random Binary Generator</a></li>
 	<li><a href="./experimental/Sway/" class="specs">Sway</a></li>
 	</ul>
@@ -111,18 +111,25 @@ function choose(arr) {return arr[Math.floor(Math.random()*arr.length)];}
 function openNav() {
 	document.body.style.background = "black";
 	gTag("h3")[0].innerHTML = choose([
+		"...I think you've been here before. Maybe I'm just misremembering things though.",
 		"...say, haven't I seen you before?",
 		"...that's pretty much all there is to it.",
+		"And then you can leave. Quick as that.",
 		"Be warned, this may be a waste of your time.",
 		"Can't really guarantee you'd find anything here interesting, though.",
 		"Except the Discord Server Rules. That one was made out of pure necessity.",
 		"I don't know what you'd be doing here though.",
 		"In my opinion however, they lack the ability to be interesting.",
+		"Little is to be done in this place.",
 		"Not sure what you can do here though.",
 		"Oh, a person. What was I to expect.",
 		"Or they were made for fun. That's more reasonable.",
+		"Or they were made out of pure curiosity.",
 		"Please be mindful of your stay. I cannot be held responsible for the time you will have wasted here.",
+		"Some of them aren't exactly the most interesting of projects though.",
 		"Though I doubt you'd find any of them interesting.",
+		"Though there are many other websites you can visit.",
+		"Very mundane, I know.",
 		"Well, that's it for now.",
 		"Why'd you come here in the first place?",
 		"You can view them, or you can leave. It's up to you.",
