--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ ul li aside:hover {
 </head>
 <body>
 <section>
-	<h1>SciPred's Website</h1>
+	<h1>SciPred's GitHub Website</h1>
 	<h2>A Collection of Random and Pointless Projects</h2>
 	<h3></h3>
 
@@ -174,7 +174,7 @@ setTimeout(function(){
 	gTag("section")[0].style.height = "100%";
 	gTag("section")[0].style.backgroundColor = "black";
 	setTimeout(function(){keyPressDelay = false;}, 350);
-}, 100);
+}, 150);
 
 function setRandomMotd() {
 	var h3str = choose([
