--- a/aboutme.html
+++ b/aboutme.html
@@ -66,6 +66,9 @@ p, ol li {
     margin-right: 30px;
     list-style-position: inside;
 }
+a {
+    color: rgb(200, 200, 0);
+}
 @keyframes borderlol {
     to {
         background-position: 100% 0%, 0% 100%, 0% 0%, 100% 100%;
@@ -111,10 +114,6 @@ p, ol li {
 </details>
 <details>
     <summary>Hobbies</summary>
-    <p>[loading]</p>
-</details>
-<details>
-    <summary>Games I Usually Play</summary>
     <p>[loading]</p>
 </details>
 <details>
@@ -285,6 +284,7 @@ p, ol li {
         <li>Garry's Mod</li>
         <li>Gauntlet of Ire</li>
         <li>Genshin Impact</li>
+        <li>Geometry Dash</li>
         <li>Geometry Dash Lite</li>
         <li>Geometry Dash Meltdown</li>
         <li>Geometry Dash Subzero</li>
@@ -294,6 +294,7 @@ p, ol li {
         <li>gettoz.com</li>
         <li>Granny</li>
         <li>Granny 2</li>
+        <li>Granny 3</li>
         <li>Gravity Switch</li>
         <li>green (game)</li>
         <li>Grey-Box Testing</li>
@@ -312,6 +313,7 @@ p, ol li {
         <li>Harvest Festival 64</li>
         <li>Hello Neighbor</li>
         <li>Hill Climb Racing</li>
+        <li>Honkai: Star Rail</li>
         <li>I am Bread</li>
         <li>I Love Hue</li>
         <li>I Love Hue Too</li>
@@ -349,7 +351,7 @@ p, ol li {
         <li>Meme Clicker - MLG Christmas</li>
         <li>Meme Crush - MLG Kush edition</li>
         <li>Merge Town!</li>
-        <li>Minecraft (Bedrock Edition, Education Edition, Pocket Edition, VR, Xbox 360 Edition)</li>
+        <li>Minecraft (Bedrock Edition, Education Edition, Java Edition, Pocket Edition, VR, Xbox 360 Edition)</li>
         <li>Minesweeper</li>
         <li>Minesweeper Classic: Retro</li>
         <li>Mini DAYZ: Zombie Survival</li>
@@ -442,6 +444,7 @@ p, ol li {
         <li>Snake VS Block</li>
         <li>Solitude</li>
         <li>Sonic Dash - Endless Runner</li>
+        <li>Sophie's Curse</li>
         <li>Soul Knight</li>
         <li>Splashy Dots</li>
         <li>Spooky's Jump Scare Mansion</li>
@@ -534,19 +537,18 @@ p, ol li {
 
 <script>
 var texts = [
-"I'm SciPred, or SciencePredator1. I first chose this name playing Monster Legends. The name stuck and got shortened and now it's what I'm usually called. Some people call me Sci or Pred for convenience.",
+"I'm SciPred, or SciencePredator1. <a href='https://www.youtube.com/watch?v=D6do5iNnfRc&t=1s&pp=ygUOc2NpcHJlZCB3aHkgbXk%3D'>I first chose this name playing Monster Legends.</a> The name stuck and got shortened and now it's what I'm usually called. Some people call me Sci or Pred for convenience. <a href='https://www.youtube.com/watch?v=cdI4xdk0Pjc&pp=ygUTc2NpcHJlZCBiYWNrIHdoZW4gaQ%3D%3D'>I used to go by other names though.</a>",
 "I can't disclose that information publicly.",
 "I can't disclose that information publicly.",
-"Well, I guess I can disclose this one. It's science.mcpe@gmail.com, if you have any inquiries (or you maybe just want to send an email for fun).",
-"Discord: SciPred#4661. You can send direct messages at any time, but don't expect a response.",
+"Well, I guess I can disclose this one. It's science.mcpe@gmail.com, if you have any inquiries (or you maybe just want to send an email for fun). However, my inbox is constantly bloated with newsletters that I don't know how to unsub from, so I might not even see your email.",
+"Discord: scipred. You can send direct messages at any time, but don't expect a response.",
 "Reddit: u/SciPred. But I haven't been using that account for a while now, and I'm using an alt which I cannot disclose yet.",
 "Twitter: SciPred, @scipreda. Don't confuse the name with the tag.",
 "YouTube: SciPred, @SciPred. I think this should be obvious enough.",
 "YouTube Minecraft Clips/Random Stuff: SkyPred, @skypred3676. No, I don't plan on changing that handle any time soon.",
 "I'm 17, which is right below the general age of consent.",
-"Male. Straight, so you can throw away any wet fantasies of me being of the opposite gender.",
-"Playing, calculating, and thought experiments.",
-"Minecraft (Java Edition), Geometry Dash, Honkai: Star Rail."
+"Male. Straight, so you can throw away any wet fantasies of me being of the opposite gender. (Or of any other gender, for that matter.)",
+"Playing, calculating, and thought experiments."
 ];
 function clearAndUpdate() {
     var ps = document.getElementsByTagName("p");
