--- a/aboutme.html
+++ b/aboutme.html
@@ -117,7 +117,7 @@ a {
     <p>[loading]</p>
 </details>
 <details>
-    <summary>Video/Web/Mobile/PC Games I Used To Play, Occasionally Play, or Checked Out For A While</summary>
+    <summary>Video/Web/Mobile/PC Games I Play, Used To Play, or Seldom Play</summary>
     <ol>
         <li>(R)evolve</li>
         <li>2048</li>
@@ -127,6 +127,7 @@ a {
         <li>2048 Bricks</li>
         <li>3:00 AM at The Krusty Krab</li>
         <li>4 Pics 1 Word</li>
+        <li>A Wonderful Day For Fishing</li>
         <li>Abiotic Factor</li>
         <li>agar.io</li>
         <li>Alien: Isolation</li>
@@ -242,8 +243,11 @@ a {
         <li>Dumb Ways To Die</li>
         <li>Dumb Ways To Die 2: The Games</li>
         <li>Dumb Ways To Die 3: World Tour</li>
+        <li>Dungeon Nightmares</li>
+        <li>Dungeon Nightmares II: The Memory</li>
         <li>Earl's Day Off</li>
         <li>Egg, Inc.</li>
+        <li>Elevated Dread</li>
         <li>Employee of the month</li>
         <li>Endless Sky</li>
         <li>Endoparasitic</li>
@@ -324,6 +328,7 @@ a {
         <li>Identity V</li>
         <li>Illuminati vs. Memes MLG</li>
         <li>IMSCARED</li>
+        <li>INPUT6</li>
         <li>It Steals</li>
         <li>Jelly Jump</li>
         <li>JKLM.FUN Party Games</li>
@@ -371,6 +376,7 @@ a {
         <li>No Players Online</li>
         <li>No Players Online Classic</li>
         <li>Not Not</li>
+        <li>Nox Timore</li>
         <li>Obama's Basics in Winning the Vote (Baldi's Basics Mod)</li>
         <li>Omori</li>
         <li>One Chance</li>
@@ -418,6 +424,7 @@ a {
         <li>Riddle School 2</li>
         <li>Riddle School 3</li>
         <li>Riddle School 4</li>
+        <li>Ring Academy</li>
         <li>Rings 4x4 - Shapes Mania</li>
         <li>Robbery Bob</li>
         <li>Robbery Bob 2: Double Trouble</li>
@@ -425,6 +432,8 @@ a {
         <li>Rolly Vortex</li>
         <li>Ronald</li>
         <li>Safety Blanket</li>
+        <li>Sakura No Gakkou</li>
+        <li>Schizophrenia Simulation</li>
         <li>SCP: Containment Breach</li>
         <li>SCP: Operation Descent</li>
         <li>SCP-091 Nostalgia</li>
@@ -449,6 +458,7 @@ a {
         <li>Splashy Dots</li>
         <li>Spooky's Jump Scare Mansion</li>
         <li>spotthedifference.com</li>
+        <li>Squirrel Stapler</li>
         <li>Stack</li>
         <li>Stack Rabbit</li>
         <li>Start Survey?</li>
@@ -479,6 +489,7 @@ a {
         <li>The Impossible Game</li>
         <li>The Impossible Game 2</li>
         <li>The Joy Of Creation</li>
+        <li>The Last Door on the Left</li>
         <li>The Looker</li>
         <li>The Open House</li>
         <li>The Quest Keeper</li>
@@ -486,10 +497,13 @@ a {
         <li>The Sims Mobile</li>
         <li>The Stanley Parable</li>
         <li>The Stanley Parable: Ultra Deluxe</li>
+        <li>The Stanley Parable: UD (Mobile)</li>
         <li>The Useless Game!</li>
         <li>The Walls</li>
         <li>The Witness</li>
         <li>There Is No Game: Wrong Dimension</li>
+        <li>Timore</li>
+        <li>Timore Inferno</li>
         <li>Tomb of the Mask</li>
         <li>Totally Accurate Battle Simulator</li>
         <li>Totally Accurate Battle Zombielator</li>
