--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ section {
 	width: 92.5%;
 	height: 0;
 	margin: auto;
-	overflow: hidden;
+	overflow: auto;
 	transition: all 0.35s;
 	background-color: #aaa;
 }
